// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`qti12-standard@1 evidence > transcodes associate 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.scoring.associate_manual",
      "message": "Preserved the native QTI 1.2 association task but removed non-portable automatic pair scoring.",
      "path": "associate.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "associate.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.scoring.associate_manual",
    ],
    "fidelity": "lossy",
    "identifier": "associate-reference",
    "mappings": [
      {
        "affectedPaths": [
          "associate.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.scoring.associate_manual",
        ],
        "emittedInteraction": "response_grp",
        "fallback": undefined,
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "associate",
      },
    ],
    "sourcePath": "associate.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="associate-reference" title="associate-reference">

    <presentation>
      <material><mattext texttype="text/html">A media-literacy item asks the student to connect a source detail with the reason it is useful. Choose the two details that belong together in a source-evaluation note.</mattext></material>


      <response_grp ident="RESPONSE" rcardinality="Multiple"><render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">Interview with the park ranger who led the restoration project</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">Firsthand source for project timeline</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">Anonymous comment on a neighborhood forum</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">Decorative map border</mattext></material></response_label><response_label ident="E"><material><mattext texttype="text/plain">Weather forecast for next month</mattext></material></response_label></render_choice></response_grp>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes choice 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "choice-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_lid",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "choice",
      },
    ],
    "sourcePath": "choice.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="choice-reference" title="choice-reference">

    <presentation>
      <material><mattext texttype="text/html">A civics item asks the student to choose the strongest evidence for a local-news claim. A local newspaper reports that the library's weekend tutoring program improved attendance. Which detail would best support that claim?</mattext></material>


      <response_lid ident="RESPONSE" rcardinality="Single">
        <render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">Attendance records show that average Saturday visits rose from 42 to 68 students after tutoring began.</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">The library repainted the study room in a brighter color during spring break.</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">Several tutors said they enjoyed helping younger students with homework.</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">The tutoring flyers used the same logo as the summer reading program.</mattext></material></response_label><response_label ident="E"><material><mattext texttype="text/plain">The library closes one hour earlier on Sundays than it does on Saturdays.</mattext></material></response_label></render_choice>
      </response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">A</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes custom 1`] = `
{
  "diagnostics": [
    {
      "code": "source.interaction.deprecated",
      "message": "qti-custom-interaction is deprecated. Deprecated in favor of qti-portable-custom-interaction.",
      "path": "/qti-assessment-item/qti-item-body[1]/qti-custom-interaction[1]",
      "severity": "warning",
    },
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted custom to a QTI 1.2 extended-text representation.",
      "path": "custom.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "/qti-assessment-item/qti-item-body[1]/qti-custom-interaction[1]",
      "custom.xml",
    ],
    "diagnosticCodes": [
      "source.interaction.deprecated",
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "custom-reference",
    "mappings": [
      {
        "affectedPaths": [
          "custom.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "custom",
      },
    ],
    "sourcePath": "custom.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="custom-reference" title="Custom reference">

    <presentation>
      <material><mattext texttype="text/html">Use the widget.</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Provide the requested response in text.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes drawing 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted drawing to a QTI 1.2 extended-text representation.",
      "path": "drawing.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "drawing.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "drawing-reference",
    "mappings": [
      {
        "affectedPaths": [
          "drawing.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "drawing",
      },
    ],
    "sourcePath": "drawing.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="drawing-reference" title="drawing-reference">

    <presentation>
      <material><mattext texttype="text/html">A science item asks the student to annotate a field-study workflow diagram. Annotate the field-study workflow by circling the step where students collect measurements and adding a note about what data should be recorded.</mattext></material>
      <material><matimage uri="hotspot-flow.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Describe the response you would draw.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes endAttempt 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted endAttempt to a QTI 1.2 extended-text representation.",
      "path": "endAttempt.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "endAttempt.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "endAttempt-reference",
    "mappings": [
      {
        "affectedPaths": [
          "endAttempt.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "endAttempt",
      },
    ],
    "sourcePath": "endAttempt.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="endAttempt-reference" title="endAttempt-reference">

    <presentation>
      <material><mattext texttype="text/html">An adaptive science item lets the student request a planning hint before answering. A student is comparing two explanations for why a coastal town floods more often after storms. The end-attempt control lets the student request a scaffold before submitting the final answer.</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Explain whether the attempt should end and why.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes extendedText 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "extendedText-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_str",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "extendedText",
      },
    ],
    "sourcePath": "extendedText.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="extendedText-reference" title="extendedText-reference">

    <presentation>
      <material><mattext texttype="text/html">A constructed-response item asks for a recommendation based on garden moisture data. Write a short recommendation for the school garden committee. Use evidence from the scenario: two beds with mulch retained more moisture during a hot week, while the uncovered bed needed watering every afternoon.</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain"></mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes gapMatch 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted the relationship task to explicit labeled relationship choices with equivalent deterministic scoring.",
      "path": "gapMatch.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "gapMatch.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.choice",
    ],
    "fidelity": "lossy",
    "identifier": "gapMatch-reference",
    "mappings": [
      {
        "affectedPaths": [
          "gapMatch.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "gapMatch",
      },
    ],
    "sourcePath": "gapMatch.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="gapMatch-reference" title="gapMatch-reference">

    <presentation>
      <material><mattext texttype="text/html">A science vocabulary item asks the student to complete a field-notes sentence from a word bank. Complete the field-notes sentence using the word bank.</mattext></material>


      <response_lid ident="RESPONSE" rcardinality="Multiple"><material><mattext texttype="text/plain">Select the correct relationships.</mattext></material><render_choice shuffle="No"><response_label ident="PAIR_A_G1"><material><mattext texttype="text/plain">evidence — G1</mattext></material></response_label><response_label ident="PAIR_A_G2"><material><mattext texttype="text/plain">evidence — G2</mattext></material></response_label><response_label ident="PAIR_B_G1"><material><mattext texttype="text/plain">claim — G1</mattext></material></response_label><response_label ident="PAIR_B_G2"><material><mattext texttype="text/plain">claim — G2</mattext></material></response_label><response_label ident="PAIR_C_G1"><material><mattext texttype="text/plain">opinion — G1</mattext></material></response_label><response_label ident="PAIR_C_G2"><material><mattext texttype="text/plain">opinion — G2</mattext></material></response_label><response_label ident="PAIR_D_G1"><material><mattext texttype="text/plain">caption — G1</mattext></material></response_label><response_label ident="PAIR_D_G2"><material><mattext texttype="text/plain">caption — G2</mattext></material></response_label></render_choice></response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><and><varequal respident="RESPONSE">PAIR_A_G1</varequal><varequal respident="RESPONSE">PAIR_B_G2</varequal><not><varequal respident="RESPONSE">PAIR_A_G2</varequal></not><not><varequal respident="RESPONSE">PAIR_B_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_C_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_C_G2</varequal></not><not><varequal respident="RESPONSE">PAIR_D_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_D_G2</varequal></not></and></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes graphicAssociate 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted the relationship task to explicit labeled relationship choices with equivalent deterministic scoring.",
      "path": "graphicAssociate.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "graphicAssociate.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.choice",
    ],
    "fidelity": "lossy",
    "identifier": "graphicAssociate-reference",
    "mappings": [
      {
        "affectedPaths": [
          "graphicAssociate.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "graphicAssociate",
      },
    ],
    "sourcePath": "graphicAssociate.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="graphicAssociate-reference" title="graphicAssociate-reference">

    <presentation>
      <material><mattext texttype="text/html">A diagram item asks the student to connect related parts of a field-study workflow. Connect the two workflow regions that belong together: planning the route should be paired with collecting water data, and analyzing results should be paired with reporting recommendations.</mattext></material>
      <material><matimage uri="hotspot-flow-unlabeled.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_lid ident="RESPONSE" rcardinality="Multiple"><material><mattext texttype="text/plain">Select the correct relationships.</mattext></material><render_choice shuffle="No"><response_label ident="PAIR_A_A"><material><mattext texttype="text/plain">Plan sampling route — Plan sampling route</mattext></material></response_label><response_label ident="PAIR_A_B"><material><mattext texttype="text/plain">Plan sampling route — Collect water data</mattext></material></response_label><response_label ident="PAIR_A_C"><material><mattext texttype="text/plain">Plan sampling route — Analyze results</mattext></material></response_label><response_label ident="PAIR_A_D"><material><mattext texttype="text/plain">Plan sampling route — Report recommendations</mattext></material></response_label><response_label ident="PAIR_A_E"><material><mattext texttype="text/plain">Plan sampling route — Community meeting</mattext></material></response_label><response_label ident="PAIR_B_A"><material><mattext texttype="text/plain">Collect water data — Plan sampling route</mattext></material></response_label><response_label ident="PAIR_B_B"><material><mattext texttype="text/plain">Collect water data — Collect water data</mattext></material></response_label><response_label ident="PAIR_B_C"><material><mattext texttype="text/plain">Collect water data — Analyze results</mattext></material></response_label><response_label ident="PAIR_B_D"><material><mattext texttype="text/plain">Collect water data — Report recommendations</mattext></material></response_label><response_label ident="PAIR_B_E"><material><mattext texttype="text/plain">Collect water data — Community meeting</mattext></material></response_label><response_label ident="PAIR_C_A"><material><mattext texttype="text/plain">Analyze results — Plan sampling route</mattext></material></response_label><response_label ident="PAIR_C_B"><material><mattext texttype="text/plain">Analyze results — Collect water data</mattext></material></response_label><response_label ident="PAIR_C_C"><material><mattext texttype="text/plain">Analyze results — Analyze results</mattext></material></response_label><response_label ident="PAIR_C_D"><material><mattext texttype="text/plain">Analyze results — Report recommendations</mattext></material></response_label><response_label ident="PAIR_C_E"><material><mattext texttype="text/plain">Analyze results — Community meeting</mattext></material></response_label><response_label ident="PAIR_D_A"><material><mattext texttype="text/plain">Report recommendations — Plan sampling route</mattext></material></response_label><response_label ident="PAIR_D_B"><material><mattext texttype="text/plain">Report recommendations — Collect water data</mattext></material></response_label><response_label ident="PAIR_D_C"><material><mattext texttype="text/plain">Report recommendations — Analyze results</mattext></material></response_label><response_label ident="PAIR_D_D"><material><mattext texttype="text/plain">Report recommendations — Report recommendations</mattext></material></response_label><response_label ident="PAIR_D_E"><material><mattext texttype="text/plain">Report recommendations — Community meeting</mattext></material></response_label><response_label ident="PAIR_E_A"><material><mattext texttype="text/plain">Community meeting — Plan sampling route</mattext></material></response_label><response_label ident="PAIR_E_B"><material><mattext texttype="text/plain">Community meeting — Collect water data</mattext></material></response_label><response_label ident="PAIR_E_C"><material><mattext texttype="text/plain">Community meeting — Analyze results</mattext></material></response_label><response_label ident="PAIR_E_D"><material><mattext texttype="text/plain">Community meeting — Report recommendations</mattext></material></response_label><response_label ident="PAIR_E_E"><material><mattext texttype="text/plain">Community meeting — Community meeting</mattext></material></response_label></render_choice></response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><and><varequal respident="RESPONSE">PAIR_A_B</varequal><varequal respident="RESPONSE">PAIR_C_D</varequal><not><varequal respident="RESPONSE">PAIR_A_A</varequal></not><not><varequal respident="RESPONSE">PAIR_A_C</varequal></not><not><varequal respident="RESPONSE">PAIR_A_D</varequal></not><not><varequal respident="RESPONSE">PAIR_A_E</varequal></not><not><varequal respident="RESPONSE">PAIR_B_A</varequal></not><not><varequal respident="RESPONSE">PAIR_B_B</varequal></not><not><varequal respident="RESPONSE">PAIR_B_C</varequal></not><not><varequal respident="RESPONSE">PAIR_B_D</varequal></not><not><varequal respident="RESPONSE">PAIR_B_E</varequal></not><not><varequal respident="RESPONSE">PAIR_C_A</varequal></not><not><varequal respident="RESPONSE">PAIR_C_B</varequal></not><not><varequal respident="RESPONSE">PAIR_C_C</varequal></not><not><varequal respident="RESPONSE">PAIR_C_E</varequal></not><not><varequal respident="RESPONSE">PAIR_D_A</varequal></not><not><varequal respident="RESPONSE">PAIR_D_B</varequal></not><not><varequal respident="RESPONSE">PAIR_D_C</varequal></not><not><varequal respident="RESPONSE">PAIR_D_D</varequal></not><not><varequal respident="RESPONSE">PAIR_D_E</varequal></not><not><varequal respident="RESPONSE">PAIR_E_A</varequal></not><not><varequal respident="RESPONSE">PAIR_E_B</varequal></not><not><varequal respident="RESPONSE">PAIR_E_C</varequal></not><not><varequal respident="RESPONSE">PAIR_E_D</varequal></not><not><varequal respident="RESPONSE">PAIR_E_E</varequal></not></and></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes graphicGapMatch 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted the relationship task to explicit labeled relationship choices with equivalent deterministic scoring.",
      "path": "graphicGapMatch.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "graphicGapMatch.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.choice",
    ],
    "fidelity": "lossy",
    "identifier": "graphicGapMatch-reference",
    "mappings": [
      {
        "affectedPaths": [
          "graphicGapMatch.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "graphicGapMatch",
      },
    ],
    "sourcePath": "graphicGapMatch.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="graphicGapMatch-reference" title="graphicGapMatch-reference">

    <presentation>
      <material><mattext texttype="text/html">A diagram-labeling item asks the student to complete two workflow labels from a word bank. Complete the field-study workflow labels.</mattext></material>
      <material><matimage uri="hotspot-flow-unlabeled.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_lid ident="RESPONSE" rcardinality="Multiple"><material><mattext texttype="text/plain">Select the correct relationships.</mattext></material><render_choice shuffle="No"><response_label ident="PAIR_A_G1"><material><mattext texttype="text/plain">Plan route — G1</mattext></material></response_label><response_label ident="PAIR_A_G2"><material><mattext texttype="text/plain">Plan route — G2</mattext></material></response_label><response_label ident="PAIR_B_G1"><material><mattext texttype="text/plain">Collect data — G1</mattext></material></response_label><response_label ident="PAIR_B_G2"><material><mattext texttype="text/plain">Collect data — G2</mattext></material></response_label><response_label ident="PAIR_C_G1"><material><mattext texttype="text/plain">Analyze results — G1</mattext></material></response_label><response_label ident="PAIR_C_G2"><material><mattext texttype="text/plain">Analyze results — G2</mattext></material></response_label><response_label ident="PAIR_D_G1"><material><mattext texttype="text/plain">Hold celebration — G1</mattext></material></response_label><response_label ident="PAIR_D_G2"><material><mattext texttype="text/plain">Hold celebration — G2</mattext></material></response_label></render_choice></response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><and><varequal respident="RESPONSE">PAIR_A_G1</varequal><varequal respident="RESPONSE">PAIR_B_G2</varequal><not><varequal respident="RESPONSE">PAIR_A_G2</varequal></not><not><varequal respident="RESPONSE">PAIR_B_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_C_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_C_G2</varequal></not><not><varequal respident="RESPONSE">PAIR_D_G1</varequal></not><not><varequal respident="RESPONSE">PAIR_D_G2</varequal></not></and></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes graphicOrder 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "graphicOrder-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_lid",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "graphicOrder",
      },
    ],
    "sourcePath": "graphicOrder.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="graphicOrder-reference" title="graphicOrder-reference">

    <presentation>
      <material><mattext texttype="text/html">A visual sequencing item asks the student to order field-study workflow regions. Select the workflow regions in the order a field team should complete them: plan the sampling route, collect data, analyze the results, then write the recommendation report.</mattext></material>
      <material><matimage uri="hotspot-flow-unlabeled.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_lid ident="RESPONSE" rcardinality="Ordered"><render_hotspot><response_label ident="A" rarea="Rectangle">24,52,136,124<material><mattext texttype="text/plain">Plan sampling route</mattext></material></response_label><response_label ident="B" rarea="Rectangle">184,52,296,124<material><mattext texttype="text/plain">Collect water data</mattext></material></response_label><response_label ident="C" rarea="Rectangle">184,178,296,250<material><mattext texttype="text/plain">Report recommendations</mattext></material></response_label><response_label ident="D" rarea="Rectangle">344,52,456,124<material><mattext texttype="text/plain">Analyze results</mattext></material></response_label></render_hotspot></response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><and><varequal respident="RESPONSE" index="1">A</varequal><varequal respident="RESPONSE" index="2">B</varequal><varequal respident="RESPONSE" index="3">D</varequal><varequal respident="RESPONSE" index="4">C</varequal></and></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes hotspot 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "hotspot-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_lid",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "hotspot",
      },
    ],
    "sourcePath": "hotspot.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="hotspot-reference" title="hotspot-reference">

    <presentation>
      <material><mattext texttype="text/html">A diagram item asks the student to select the workflow step where stream data are collected. The field-study workflow shows how a class monitors water quality. Select the step where students collect water-temperature and dissolved-oxygen readings at the stream.</mattext></material>
      <material><matimage uri="hotspot-flow.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_lid ident="RESPONSE" rcardinality="Single"><render_hotspot><response_label ident="A" rarea="Rectangle">184,52,296,124<material><mattext texttype="text/plain">A</mattext></material></response_label><response_label ident="B" rarea="Rectangle">24,52,136,124<material><mattext texttype="text/plain">B</mattext></material></response_label><response_label ident="C" rarea="Rectangle">344,52,456,124<material><mattext texttype="text/plain">C</mattext></material></response_label><response_label ident="D" rarea="Rectangle">184,178,296,250<material><mattext texttype="text/plain">D</mattext></material></response_label></render_hotspot></response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">A</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes hottext 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted hottext to a QTI 1.2 choice representation.",
      "path": "hottext.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "hottext.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.choice",
    ],
    "fidelity": "lossy",
    "identifier": "hottext-reference",
    "mappings": [
      {
        "affectedPaths": [
          "hottext.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "hottext",
      },
    ],
    "sourcePath": "hottext.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="hottext-reference" title="hottext-reference">

    <presentation>
      <material><mattext texttype="text/html">A reading item asks the student to select the author's claim inside a short paragraph. Read the paragraph and select the phrase that best states the author's claim.</mattext></material>


      <response_lid ident="RESPONSE" rcardinality="Single">
        <render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">A small green space would give nearby residents a shaded place to gather</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">The lot is 0.4 acres</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">The planning department posted the proposal last Tuesday</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">Two benches are stored in a public works warehouse</mattext></material></response_label></render_choice>
      </response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">A</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes inlineChoice 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted inlineChoice to a QTI 1.2 choice representation.",
      "path": "inlineChoice.xml",
      "severity": "warning",
    },
    {
      "code": "profile.qti12.fallback.choice",
      "message": "Converted inlineChoice to a QTI 1.2 choice representation.",
      "path": "inlineChoice.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "inlineChoice.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.choice",
      "profile.qti12.fallback.choice",
    ],
    "fidelity": "lossy",
    "identifier": "inlineChoice-reference",
    "mappings": [
      {
        "affectedPaths": [
          "inlineChoice.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "inlineChoice",
      },
      {
        "affectedPaths": [
          "inlineChoice.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.choice",
        ],
        "emittedInteraction": "response_lid",
        "fallback": "choice",
        "fidelity": "lossy",
        "index": 1,
        "scoring": "automatic",
        "sourceInteraction": "inlineChoice",
      },
    ],
    "sourcePath": "inlineChoice.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="inlineChoice-reference" title="inlineChoice-reference">

    <presentation>
      <material><mattext texttype="text/html">Read the sentence from a school-news article and choose the words that make the account accurate. After a three-week pilot, the cafeteria team reported that the reusable tray program , and the strongest evidence was the .</mattext></material>


      <response_lid ident="RESPONSE_DECLARATION" rcardinality="Single">
        <render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">reduced lunchroom waste</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">increased disposable packaging</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">left trash levels unchanged</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">stopped food donations</mattext></material></response_label></render_choice>
      </response_lid>
      <response_lid ident="RESPONSE_OUTCOME" rcardinality="Single">
        <render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">number of students who bought lunch</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">drop in bags collected after lunch</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">color of the new trays</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">menu posted on Monday</mattext></material></response_label></render_choice>
      </response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE_DECLARATION">A</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE_OUTCOME">B</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes match 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "match-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_lid",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "match",
      },
    ],
    "sourcePath": "match.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="match-reference" title="match-reference">

    <presentation>
      <material><mattext texttype="text/html">A garden-data item asks the student to match observations with reasonable interpretations. Match each observation from a community garden study with the most reasonable interpretation.</mattext></material>


      <response_lid ident="A" rcardinality="Single">
        <material><mattext texttype="text/plain">Mulched beds stayed moist two days longer after watering.</mattext></material>
        <render_choice shuffle="No"><response_label ident="G1"><material><mattext texttype="text/plain">Mulch helped reduce water loss from the soil.</mattext></material></response_label><response_label ident="G2"><material><mattext texttype="text/plain">Bare soil may need more frequent weeding.</mattext></material></response_label><response_label ident="G3"><material><mattext texttype="text/plain">Light exposure was not identical across all beds.</mattext></material></response_label><response_label ident="G4"><material><mattext texttype="text/plain">This maintenance detail does not explain plant growth.</mattext></material></response_label></render_choice>
      </response_lid><response_lid ident="B" rcardinality="Single">
        <material><mattext texttype="text/plain">Uncovered beds had more weeds by the third week.</mattext></material>
        <render_choice shuffle="No"><response_label ident="G1"><material><mattext texttype="text/plain">Mulch helped reduce water loss from the soil.</mattext></material></response_label><response_label ident="G2"><material><mattext texttype="text/plain">Bare soil may need more frequent weeding.</mattext></material></response_label><response_label ident="G3"><material><mattext texttype="text/plain">Light exposure was not identical across all beds.</mattext></material></response_label><response_label ident="G4"><material><mattext texttype="text/plain">This maintenance detail does not explain plant growth.</mattext></material></response_label></render_choice>
      </response_lid><response_lid ident="C" rcardinality="Single">
        <material><mattext texttype="text/plain">Beds near the fence received less afternoon sun.</mattext></material>
        <render_choice shuffle="No"><response_label ident="G1"><material><mattext texttype="text/plain">Mulch helped reduce water loss from the soil.</mattext></material></response_label><response_label ident="G2"><material><mattext texttype="text/plain">Bare soil may need more frequent weeding.</mattext></material></response_label><response_label ident="G3"><material><mattext texttype="text/plain">Light exposure was not identical across all beds.</mattext></material></response_label><response_label ident="G4"><material><mattext texttype="text/plain">This maintenance detail does not explain plant growth.</mattext></material></response_label></render_choice>
      </response_lid><response_lid ident="D" rcardinality="Single">
        <material><mattext texttype="text/plain">The garden sign was repainted on Saturday.</mattext></material>
        <render_choice shuffle="No"><response_label ident="G1"><material><mattext texttype="text/plain">Mulch helped reduce water loss from the soil.</mattext></material></response_label><response_label ident="G2"><material><mattext texttype="text/plain">Bare soil may need more frequent weeding.</mattext></material></response_label><response_label ident="G3"><material><mattext texttype="text/plain">Light exposure was not identical across all beds.</mattext></material></response_label><response_label ident="G4"><material><mattext texttype="text/plain">This maintenance detail does not explain plant growth.</mattext></material></response_label></render_choice>
      </response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="A">G1</varequal></conditionvar><setvar action="Add" varname="SCORE">50</setvar></respcondition><respcondition continue="Yes"><conditionvar><varequal respident="B">G2</varequal></conditionvar><setvar action="Add" varname="SCORE">50</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes media 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted media to a QTI 1.2 extended-text representation.",
      "path": "media.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "media.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "media-reference",
    "mappings": [
      {
        "affectedPaths": [
          "media.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "media",
      },
    ],
    "sourcePath": "media.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="media-reference" title="media-reference">

    <presentation>
      <material><mattext texttype="text/html">A listening item renders a town-hall audio excerpt through native browser media controls. Play the town-hall audio excerpt once before answering the follow-up question about the speaker's claim. This fixture uses silent audio so browser media controls can be tested without shipping copyrighted material.</mattext></material>
      <material><mataudio uri="data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=" audiotype="audio/wav" label="Silent town-hall audio excerpt"></mataudio></material>

      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Describe your response after reviewing the media.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes order 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "order-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_lid",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "order",
      },
    ],
    "sourcePath": "order.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="order-reference" title="order-reference">

    <presentation>
      <material><mattext texttype="text/html">A science-planning item asks the student to arrange investigation steps in order. A science class is planning a fair test of how light affects seedling growth. Put the investigation steps in the best order.</mattext></material>


      <response_lid ident="RESPONSE" rcardinality="Ordered">
        <render_choice shuffle="No"><response_label ident="A"><material><mattext texttype="text/plain">Set up identical trays with the same soil, seed type, and water schedule.</mattext></material></response_label><response_label ident="B"><material><mattext texttype="text/plain">Place one tray in full light and one tray in reduced light for the same number of days.</mattext></material></response_label><response_label ident="C"><material><mattext texttype="text/plain">Measure and compare seedling height at the end of the trial.</mattext></material></response_label><response_label ident="D"><material><mattext texttype="text/plain">Use the measurements to write a conclusion about how light affected growth.</mattext></material></response_label></render_choice>
      </response_lid>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><and><varequal respident="RESPONSE" index="1">A</varequal><varequal respident="RESPONSE" index="2">B</varequal><varequal respident="RESPONSE" index="3">C</varequal><varequal respident="RESPONSE" index="4">D</varequal></and></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes portableCustom 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted portableCustom to a QTI 1.2 extended-text representation.",
      "path": "portableCustom.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "portableCustom.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "portableCustom-reference",
    "mappings": [
      {
        "affectedPaths": [
          "portableCustom.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "portableCustom",
      },
    ],
    "sourcePath": "portableCustom.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="portableCustom-reference" title="portableCustom-reference">

    <presentation>
      <material><mattext texttype="text/html">A graphing-item placeholder exercises a custom interaction while presenting sample-data content. Use the custom graphing tool to choose the claim best supported by the sample data. The fixture module returns A for the supported claim.</mattext></material>
      <material><matapplication uri="modules/module_resolution.js" apptype="application/javascript" label="Custom interaction dependency"></matapplication></material>
      <material><matapplication uri="modules/fixture-portable-custom" apptype="application/octet-stream" label="Custom interaction dependency"></matapplication></material>

      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Provide the requested response in text.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes positionObject 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.text-entry",
      "message": "Converted positionObject to a QTI 1.2 text-entry representation.",
      "path": "positionObject.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "positionObject.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.text-entry",
    ],
    "fidelity": "lossy",
    "identifier": "positionObject-reference",
    "mappings": [
      {
        "affectedPaths": [
          "positionObject.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.text-entry",
        ],
        "emittedInteraction": "response_str",
        "fallback": "text-entry",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "positionObject",
      },
    ],
    "sourcePath": "positionObject.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="positionObject-reference" title="positionObject-reference">

    <presentation>
      <material><mattext texttype="text/html">A diagram item asks the student to move a field-note marker onto the data-collection step. Drag the field-note marker onto the Collect water data step in the workflow.</mattext></material>
      <material><matimage uri="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2064%2048'%3E%3Crect%20x='4'%20y='4'%20width='56'%20height='40'%20rx='8'%20fill='%23fff3bf'%20stroke='%23212529'%20stroke-width='4'/%3E%3Cpath%20d='M32%2044%20L24%2058%20L40%2058%20Z'%20fill='%23fff3bf'%20stroke='%23212529'%20stroke-width='4'/%3E%3C/svg%3E" imagtype="image/svg+xml" label="Question media" width="64" height="48"></matimage></material>
      <material><matimage uri="hotspot-flow.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>
      <material><matimage uri="hotspot-flow.svg" imagtype="image/svg+xml" label="Question media"></matimage></material>
      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Enter the response as x,y coordinates.</mattext></material><render_fib fibtype="String" prompt="Box" rows="1" columns="30"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">240,88</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes selectPoint 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.text-entry",
      "message": "Converted selectPoint to a QTI 1.2 text-entry representation.",
      "path": "selectPoint.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "selectPoint.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.text-entry",
    ],
    "fidelity": "lossy",
    "identifier": "selectPoint-reference",
    "mappings": [
      {
        "affectedPaths": [
          "selectPoint.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.text-entry",
        ],
        "emittedInteraction": "response_str",
        "fallback": "text-entry",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "selectPoint",
      },
    ],
    "sourcePath": "selectPoint.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="selectPoint-reference" title="selectPoint-reference">

    <presentation>
      <material><mattext texttype="text/html">A coordinate item asks the student to mark the center of the data-collection workflow step. Mark the center of the Collect water data step, where students record the stream measurements.</mattext></material>
      <material><matimage uri="hotspot-flow.svg" imagtype="image/svg+xml" label="Question media" width="480" height="300"></matimage></material>

      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Enter the response as x,y coordinates.</mattext></material><render_fib fibtype="String" prompt="Box" rows="1" columns="30"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">240,88</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes slider 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.text-entry",
      "message": "Converted slider to a QTI 1.2 text-entry representation.",
      "path": "slider.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "slider.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.text-entry",
    ],
    "fidelity": "lossy",
    "identifier": "slider-reference",
    "mappings": [
      {
        "affectedPaths": [
          "slider.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.text-entry",
        ],
        "emittedInteraction": "response_str",
        "fallback": "text-entry",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "slider",
      },
    ],
    "sourcePath": "slider.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="slider-reference" title="slider-reference">

    <presentation>
      <material><mattext texttype="text/html">A timeline item asks the student to choose the opening year of a restored rail-trail. A community archive asks students to place the opening year of the restored rail-trail on a timeline. The project opened in 2024 after fourteen years of planning. Select the opening year.</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Enter a value within the stated range.</mattext></material><render_fib fibtype="Decimal" prompt="Box" rows="1" columns="30"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">2024</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes textEntry 1`] = `
{
  "diagnostics": [],
  "report": {
    "affectedPaths": [],
    "diagnosticCodes": [],
    "fidelity": "exact",
    "identifier": "textEntry-reference",
    "mappings": [
      {
        "affectedPaths": [],
        "diagnosticCodes": [],
        "emittedInteraction": "response_str",
        "fallback": undefined,
        "fidelity": "exact",
        "index": 0,
        "scoring": "automatic",
        "sourceInteraction": "textEntry",
      },
    ],
    "sourcePath": "textEntry.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="textEntry-reference" title="textEntry-reference">

    <presentation>
      <material><mattext texttype="text/html">A geography vocabulary item asks the student to type the name of a coastal feature. A river meets the ocean in a partly enclosed area where fresh water and salt water mix. Type the vocabulary word for this coastal feature: .</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain"></mattext></material><render_fib fibtype="String" prompt="Box" rows="1" columns="30"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="Yes"><conditionvar><varequal respident="RESPONSE">estuary</varequal></conditionvar><setvar action="Add" varname="SCORE">1</setvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;

exports[`qti12-standard@1 evidence > transcodes upload 1`] = `
{
  "diagnostics": [
    {
      "code": "profile.qti12.fallback.extended-text",
      "message": "Converted upload to a QTI 1.2 extended-text representation.",
      "path": "upload.xml",
      "severity": "warning",
    },
  ],
  "report": {
    "affectedPaths": [
      "upload.xml",
    ],
    "diagnosticCodes": [
      "profile.qti12.fallback.extended-text",
    ],
    "fidelity": "lossy",
    "identifier": "upload-reference",
    "mappings": [
      {
        "affectedPaths": [
          "upload.xml",
        ],
        "diagnosticCodes": [
          "profile.qti12.fallback.extended-text",
        ],
        "emittedInteraction": "response_str",
        "fallback": "extended-text",
        "fidelity": "lossy",
        "index": 0,
        "scoring": "manual",
        "sourceInteraction": "upload",
      },
    ],
    "sourcePath": "upload.xml",
  },
  "xml": "<?xml version="1.0" encoding="UTF-8"?>
<questestinterop xmlns="http://www.imsglobal.org/xsd/ims_qtiasiv1p2"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://www.imsglobal.org/xsd/ims_qtiasiv1p2 http://www.imsglobal.org/xsd/ims_qtiasiv1p2.xsd">
  <item ident="upload-reference" title="upload-reference">

    <presentation>
      <material><mattext texttype="text/html">A constructed-response item asks the student to upload a field-notes text file. Upload a text file named upload.txt containing your one-page field notes from the water-quality investigation.</mattext></material>


      <response_str ident="RESPONSE" rcardinality="Single"><material><mattext texttype="text/plain">Describe the file or work you would submit.</mattext></material><render_fib fibtype="String" prompt="Box" rows="8" columns="72"></render_fib></response_str>
    </presentation>
    <resprocessing>
      <outcomes><decvar varname="SCORE" vartype="Decimal" defaultval="0"/></outcomes>
      <respcondition continue="No"><conditionvar><other/></conditionvar></respcondition>
    </resprocessing>
  </item>
</questestinterop>",
}
`;
